# GEMINI-App

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  Dockerfile  GEMINI-Data  GPU-SETUP.md  Makefile  README.md  README_Docker.md  build-linux.sh  build-macos.sh  build-windows.ps1  build.sh  docker-build-and-push.sh  docker-compose-gpu.yml  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  install.sh  openapi.json  package-lock.json  package.json  setup_submodules.sh  startup.sh
.github/workflows/: build.yml  (+1 more)
backend/: .gitignore  build-desktop.sh  gemi-backend.spec  pyproject.toml  run_server.py
docs/: BUILDING.md  DASHBOARD.md  DEVELOPMENT.md  INSTRUCTIONS.md  MIGRATION_GAP_ANALYSIS.md  REFERENCE_DATA_AND_MASTER_TABLE.md  SCHEMA.md
frontend/: .env  .gitignore  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  prettier.config.js  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src-tauri/: .gitignore  Cargo.toml  inno-setup.iss  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  sidecar_manager.rs
gemini-app/: .env  .env.example  .env.save  .gitignore  docker-compose.yml  generate-runtime-config.sh  nohup.out  package-lock.json  package.json  package.json.back  package.json.save  package.json.save.1  playwright.config.js  run_framework_backend.sh  stop_framework_backend.sh
scripts/: check-worker-staleness.sh  setup-backend.sh  start-backend.sh
(+704 files in other folders)
